@@ -21,10 +21,10 @@ function doBuild ()
 
   if type rsync >/dev/null 2>&1
   then
-    env rsync -aP ${MY_DIR}/ $C_DIR/
+    rsync -aP ${MY_DIR}/ $C_DIR/
   elif type cp >/dev/null 2>&1
   then
-    env cp -rvf ${MY_DIR}/* $C_DIR
+    cp -rvf ${MY_DIR}/* $C_DIR
   else
     return 1
   fi
