@@ -6,14 +6,15 @@
 function doGenerate ()
 {
   local C_DIR=$(dirname $(readlink -f $0))
-  local BUILD_SH=$C_DIR/build.sh
+  local BUILD_SH="${C_DIR}/build.sh"
 
   if [[ -r $BUILD_SH ]]
   then
     source $BUILD_SH
   fi
 
-  env hexo generate
+  hexo clean
+  hexo generate
 
   return $?
 }
