@@ -13,6 +13,7 @@
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-feed": "^1.0.3",
     "hexo-generator-index": "^0.1.3",
+    "hexo-generator-search": "^1.0.2",
     "hexo-generator-seo-friendly-sitemap": "0.0.15",
     "hexo-generator-sitemap": "^1.1.2",
     "hexo-generator-tag": "^0.1.1",
