@@ -11,8 +11,8 @@ function doPush ()
 {
   local C_DIR=$(dirname $(readlink -f $0))
   local T_DIR=$(pwd)
-  local G_DIR=${C_DIR}/.git
-  local G_CONF=${G_DIR}/config
+  local G_DIR="${C_DIR}/.git"
+  local G_CONF="${G_DIR}/config"
   local G_FLAGS="--porcelain --ignore-submodules=dirty"
   local G_STATUS=''
   local remote=''
@@ -26,7 +26,7 @@ function doPush ()
     return 1
   fi
 
-  remote=( $(env grep -oP '(?<=\[remote\h")\w+(?="\])' $G_CONF) )
+  remote=( $(grep -oP '(?<=\[remote\h")\w+(?="\])' $G_CONF) )
   remote=${remote[0]}
 
   if [[ -z $remote ]]
@@ -34,7 +34,7 @@ function doPush ()
     remote='origin'
   fi
 
-  G_STATUS=$(env git status ${G_FLAGS} 2>/dev/null | env tail -n 1 )
+  G_STATUS=$(git status ${G_FLAGS} 2>/dev/null | tail -n 1 )
   if [[ -n $G_STATUS ]]
   then
     echo "Repo is dirty, do noting." >&2
@@ -42,7 +42,7 @@ function doPush ()
     return 1
   fi
 
-  env git push $remote $BRANCH
+  git push $remote $BRANCH
   cd $T_DIR
 
   return 0
