@@ -6,14 +6,14 @@
 function doServe ()
 {
   local C_DIR=$(dirname $(readlink -f $0))
-  local GENERATE_SH=$C_DIR/generate.sh
+  local GENERATE_SH="${C_DIR}/generate.sh"
 
   if [[ -r $GENERATE_SH ]]
   then
     source $GENERATE_SH
   fi
 
-  env hexo server
+  hexo server
 
   return $?
 }
